# shared-whiteboard-app

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindBoost.cmake  FindQt5.cmake
app/: CMakeLists.txt
lib/: CMakeLists.txt
scripts/CMake/: Config.cmake  Version.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/Client/: client.cpp  client.h  packet.cpp  packet.h
src/app/Common/: logger.hpp  utilities.cpp
src/app/Engine/: DrawingManager.cpp  Engine.cpp  Engine.h
src/app/Managers/: CommunicationManager.cpp  CommunicationManager.h  DrawingManager.h  WindowManager.cpp  WindowManager.h
src/app/Server/: packet.cpp  packet.h  server.cpp  server.h  session.cpp  session.h
src/app/UI/: DrawingCanvas.cpp  DrawingCanvas.h  LoginWindow.cpp  LoginWindow.h  WaitingWindow_client.cpp  WaitingWindow_client.h  WaitingWindow_server.cpp  WaitingWindow_server.h
